Сделал heder, platforms

--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-sgsdgdfghdfhgfhfghfgh
+  <header class="header">
+    <h1>There is no other platforms for you as like</h1>
+    <button class="header__play"></button>
+    <button class="header__try">Try now</button>
+  </header>
+  <section class="platforms">
+    <div class="platforms__text">
+      <p class="platforms__new">NEW DESIGN</p>
+      <h2>There is no other platforms for you as like <span>....</span></h2>
+      <p class="platforms__par">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
+      <p class="platforms__par">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+    </div>
+    <div class="platforms__block">
+
+    </div>
+  </section>
   <script src="js/libs.min.js"></script>
   <script src="js/common.js"></script>
 </body>
