--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 </head>
 <body>
   <header class="header">
+    <div class="is_overlay">
+      <video loop="loop" poster="/img/bg.jpg">
+        <source src="/videos/1.mp4" type="video/mp4">
+        <source src="/videos/2.webm" type="video/webm">
+      </video>
+    </div>
     <h1>There is no other platforms for you as like</h1>
-    <button class="header__play"></button>
+    <button class="header__play" id="pause"></button>
     <button class="header__try">Try now</button>
   </header>
   <section class="platforms">
@@ -21,8 +27,40 @@
       <p class="platforms__par">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
       <p class="platforms__par">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
     </div>
-    <div class="platforms__block">
-
+    <div class="platforms__block"></div>
+  </section>
+  <section class="awesome">
+    <div class="awesome__pens"></div>
+    <div class="awesome__headphones"></div>
+    <p class="awesome__new">NEW FEATURES</p>
+    <h2>Some awesone features</h2>
+    <div class="awesome__wrap">
+      <article>
+        <img src="img/awesone1.png" alt="awesone1">
+        <h3>Some awesone features</h3>
+        <p>Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+      </article>
+      <article>
+        <img src="img/awesone2.png" alt="awesone2">
+        <h3>Some awesone features</h3>
+        <p>Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+      </article>
+      <article>
+        <img src="img/awesone3.png" alt="awesone3">
+        <h3>Some awesone features</h3>
+        <p>Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+      </article>
+    </div>
+    <div class="awesome__glass"></div>
+  </section>
+  <section class="resposive-design">
+    <div class="resposive-design__image">
+      <img src="img/macbook.png" alt="macbook">
+    </div>
+    <div class="resposive-design__text">
+      <p class="resposive-design__new">NEW DESIGN</p>
+      <h2>Resposive design, just need your tap <span>....</span></h2>
+      <p class="resposive-design__paragraph">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
     </div>
   </section>
   <script src="js/libs.min.js"></script>
