--- a/index.html
+++ b/index.html
@@ -63,6 +63,91 @@
       <p class="resposive-design__paragraph">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
     </div>
   </section>
+  <section class="cofounder">
+    <div class="cofounder__wrap">
+      <article class="cofounder__item">
+        <div class="cofounder__box"></div>
+        <h3>Jonathon Doe</h3>
+        <span>Co Founder</span>
+        <p>“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
+      </article>
+      <article class="cofounder__item">
+        <div class="cofounder__box"></div>
+        <h3>Jonathon Doe</h3>
+        <span>Co Founder</span>
+        <p>“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
+      </article>
+      <article class="cofounder__item">
+        <div class="cofounder__box"></div>
+        <h3>Jonathon Doe</h3>
+        <span>Co Founder</span>
+        <p>“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
+      </article>
+    </div>
+    <div class="cofounder__logos">
+      <img src="/img/rvlrv.png" alt="eatginds">
+      <img src="/img/hits.png" alt="hits">
+      <img src="/img/rvlrv.png" alt="igor">
+      <img src="/img/hits.png" alt="rvlrv">
+      <img src="/img/rvlrv.png" alt="sienna">
+    </div>
+  </section>
+  <section class="awesome2">
+    <span>NEW FEATURES</span>
+    <h2>Some awesone features</h2>
+    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
+      <img class="awesome2__img" src="/img/window.png" alt="window">
+  </section>
+  <section class="desingers">
+    <span>NEW FEATURES</span>
+    <h2>Over 1000 designers are using ...</h2>
+    <form class="desingers__form" action="#">
+      <input class="desingers__input" type="text" name="answer" placeholder="FULL NAME">
+      <input class="desingers__input" type="email" name="answer" placeholder="YOUR EMAIL">
+      <input class="desingers__input" type="password" name="answer" placeholder="PASSWORD">
+      <div class="desingers__sub">
+        <input class="desingers__submit" id = "desingers__submit" type="submit" value="TRY NOW">
+      </div>
+    </form>
+    <p>By Signing up you agree to our <a href="#">terms & Services</a>.</p>
+  </section>
+  <footer class="footer">
+    <div class="footer__start">
+      <img src="img/start.png" alt="start">
+      <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam.
+        USA &  CAN: 1-888-123-4567
+        Address: 34 Brokel Rd. NY</p>
+    </div>
+    <div class="footer__support">
+      <h3>Support</h3>
+      <ul>
+        <li><a href="#">Help Center</a></li>
+        <li><a href="#">Get Started</a></li>
+        <li><a href="#">Contact US</a></li>
+      </ul>
+    </div>
+    <div class="footer__about">
+      <h3>About US</h3>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+      </ul>
+    </div>
+    <div class="footer__newsletter">
+      <h3>Get Newsletter</h3>
+      <form class="footer__form" action="#">
+        <input class="footer__search" type="text" placeholder="EMAIL">
+        <input class="footer__sub" type="submit" value="">
+      </form>
+      <ul>
+        <li><a href="#"><img src="img/dribble.png" alt=""></a></li>
+        <li><a href="#"><img src="img/facebook.png" alt=""></a></li>
+        <li><a href="#"><img src="img/google.png" alt=""></a></li>
+        <li><a href="#"><img src="img/twitter.png" alt=""></a></li>
+      </ul>
+    </div>
+  </footer>
   <script src="js/libs.min.js"></script>
   <script src="js/common.js"></script>
 </body>
