Поправил пути у рисунков

--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
       </article>
     </div>
     <div class="cofounder__logos">
-      <img src="/img/rvlrv.png" alt="eatginds">
-      <img src="/img/hits.png" alt="hits">
-      <img src="/img/rvlrv.png" alt="igor">
-      <img src="/img/hits.png" alt="rvlrv">
-      <img src="/img/rvlrv.png" alt="sienna">
+      <img src="img/rvlrv.png" alt="eatginds">
+      <img src="img/hits.png" alt="hits">
+      <img src="img/rvlrv.png" alt="igor">
+      <img src="img/hits.png" alt="rvlrv">
+      <img src="img/rvlrv.png" alt="sienna">
     </div>
   </section>
   <section class="awesome2">
     <span>NEW FEATURES</span>
     <h2>Some awesone features</h2>
     <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
-      <img class="awesome2__img" src="/img/window.png" alt="window">
+      <img class="awesome2__img" src="img/window.png" alt="window">
   </section>
   <section class="desingers">
     <span>NEW FEATURES</span>
