--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <section class="platforms">
     <div class="platforms__text">
       <p class="platforms__new wow fadeInUp" data-wow-offset="150">NEW DESIGN</p>
-      <h2 class="wow fadeInUp"  data-wow-delay="0.3s" data-wow-offset="150">There is no other platforms for you as like <span>....</span></h2>
-      <p class="platforms__par wow fadeInUp" data-wow-delay=".6s" data-wow-offset="150">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
-      <p class="platforms__par wow fadeInUp" data-wow-delay=".9s" data-wow-offset="150">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
+      <h2 class="wow fadeInUp"  data-wow-delay="0.2s" data-wow-offset="150">There is no other platforms for you as like <span>....</span></h2>
+      <p class="platforms__par wow fadeInUp" data-wow-delay=".4s" data-wow-offset="150">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
+      <p class="platforms__par wow fadeInUp" data-wow-delay=".6s" data-wow-offset="150">Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
     </div>
     <div class="platforms__block"></div>
   </section>
@@ -33,19 +33,19 @@
     <div class="awesome__pens"></div>
     <div class="awesome__headphones"></div>
     <p class="awesome__new wow fadeInUp" data-wow-offset="150">NEW FEATURES</p>
-    <h2 class="wow fadeInUp" data-wow-delay="0.3s" data-wow-offset="150">Some awesone features</h2>
+    <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-wow-offset="150">Some awesone features</h2>
     <div class="awesome__wrap">
       <article class="wow fadeInLeft" data-wow-offset="150">
         <img src="img/awesone1.png" alt="awesone1">
         <h3>Some awesone features</h3>
         <p>Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
       </article>
-      <article class="wow fadeInLeft" data-wow-delay=".3s" data-wow-offset="150">
+      <article class="wow fadeInLeft" data-wow-delay=".2s" data-wow-offset="150">
         <img src="img/awesone2.png" alt="awesone2">
         <h3>Some awesone features</h3>
         <p>Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
       </article>
-      <article class="wow fadeInLeft" data-wow-delay=".6s" data-wow-offset="150">
+      <article class="wow fadeInLeft" data-wow-delay=".4s" data-wow-offset="150">
         <img src="img/awesone3.png" alt="awesone3">
         <h3>Some awesone features</h3>
         <p>Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.</p>
@@ -59,8 +59,8 @@
     </div>
     <div class="resposive-design__text">
       <p class="resposive-design__new wow fadeInUp" data-wow-offset="150">NEW DESIGN</p>
-      <h2 class="wow fadeInUp" data-wow-delay="0.3s" data-wow-offset="150">Resposive design, just need your tap <span>....</span></h2>
-      <p class="resposive-design__paragraph wow fadeInUp" data-wow-delay=".6s" data-wow-offset="150">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
+      <h2 class="wow fadeInUp" data-wow-delay="0.2s" data-wow-offset="150">Resposive design, just need your tap <span>....</span></h2>
+      <p class="resposive-design__paragraph wow fadeInUp" data-wow-delay=".4s" data-wow-offset="150">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
     </div>
   </section>
   <section class="cofounder">
@@ -71,13 +71,13 @@
         <span>Co Founder</span>
         <p>“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
       </article>
-      <article class="cofounder__item wow fadeInLeft" data-wow-delay=".3s" data-wow-offset="150">
+      <article class="cofounder__item wow fadeInLeft" data-wow-delay=".2s" data-wow-offset="150">
         <div class="cofounder__box"></div>
         <h3>Jonathon Doe</h3>
         <span>Co Founder</span>
         <p>“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”</p>
       </article>
-      <article class="cofounder__item wow fadeInLeft" data-wow-delay=".6s" data-wow-offset="150">
+      <article class="cofounder__item wow fadeInLeft" data-wow-delay=".4s" data-wow-offset="150">
         <div class="cofounder__box"></div>
         <h3>Jonathon Doe</h3>
         <span>Co Founder</span>
@@ -94,18 +94,18 @@
   </section>
   <section class="awesome2">
     <p class="awesome2__new wow fadeInUp" data-wow-offset="150">NEW FEATURES</p>
-    <h2 class="wow fadeInUp" data-wow-delay=".3s" data-wow-offset="150">Some awesone features</h2>
-    <p class="awesome2__text wow fadeInUp" data-wow-delay=".6s" data-wow-offset="150">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
+    <h2 class="wow fadeInUp" data-wow-delay=".2s" data-wow-offset="150">Some awesone features</h2>
+    <p class="awesome2__text wow fadeInUp" data-wow-delay=".4s" data-wow-offset="150">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.</p>
       <img class="awesome2__img" src="img/window.png" alt="window">
   </section>
   <section class="desingers">
     <p class="desingers__new wow fadeInUp" data-wow-offset="150">NEW FEATURES</p>
-    <h2 class="wow fadeInUp" data-wow-delay=".3s" data-wow-offset="150">Over 1000 designers are using ...</h2>
+    <h2 class="wow fadeInUp" data-wow-delay=".2s" data-wow-offset="150">Over 1000 designers are using ...</h2>
     <form class="desingers__form" action="#">
       <input class="desingers__input wow fadeInLeft" data-wow-offset="150" type="text" name="answer" placeholder="FULL NAME">
-      <input class="desingers__input wow fadeInLeft" data-wow-delay=".3s" data-wow-offset="150" type="email" name="answer" placeholder="YOUR EMAIL">
+      <input class="desingers__input wow fadeInLeft" data-wow-delay=".4s" data-wow-offset="150" type="email" name="answer" placeholder="YOUR EMAIL">
       <input class="desingers__input wow fadeInLeft" data-wow-delay=".6s" data-wow-offset="150" type="password" name="answer" placeholder="PASSWORD">
-      <div class="desingers__sub wow fadeInLeft" data-wow-delay="1.5s">
+      <div class="desingers__sub wow fadeInLeft" data-wow-delay=".8s">
         <input class="desingers__submit" id = "desingers__submit" type="submit" value="TRY NOW">
       </div>
     </form>
